--- a/TVAPPweb/src/pages/error/error.html
+++ b/TVAPPweb/src/pages/error/error.html
@@ -1,6 +1,6 @@
 <ion-header>
 
-  <ion-navbar hideBackButton="true">
+  <ion-navbar hideBackButton="true" color="danger">
       <ion-buttons left>
         <button ion-button icon-only (click)="this.viewCtrl.dismiss();">
           <ion-icon name="arrow-back"></ion-icon>关闭 ({{closeSecond}} 秒)
