图像大小统一

--- a/TVAPPweb/src/pages/tvhome/tvhome.html
+++ b/TVAPPweb/src/pages/tvhome/tvhome.html
@@ -45,7 +45,9 @@
       <p>
           <img *ngIf="WindowApplyProducts[0].prolist.length==1" 
           src="{{this.common.GetImgUrl(WindowApplyProducts[0].prolist[0].localpath)}}" 
-           style="border-radius: 1.8rem" class="shadow" height="{{this.common.GetWindowHeight()/2.5}}">
+           style="border-radius: 1.8rem" class="shadow" width="{{this.common.GetWindowWidth()/3.5}}"
+           height="{{this.common.GetWindowWidth()/3.5*9/16}}" 
+           >
       </p>
     </ion-col>
   </ion-row>
@@ -67,11 +69,14 @@
         <img *ngIf="WindowApplyProducts[0].prolist.length==1 && 
         WindowApplyProducts[1].prolist[0].localpath!=WindowApplyProducts[0].prolist[0].localpath" 
         src="{{this.common.GetImgUrl(WindowApplyProducts[0].prolist[0].localpath)}}" 
-        height="{{this.common.GetWindowHeight()/3.8}}" style="border-radius: 1.8rem" class="shadow">
+        width="{{this.common.GetWindowWidth()/3.5}}"
+        height="{{this.common.GetWindowWidth()/3.5*9/16}}" 
+        style="border-radius: 1.8rem" class="shadow">
         <img *ngIf="WindowApplyProducts[0].prolist.length==1 && 
         WindowApplyProducts[1].prolist[0].localpath==WindowApplyProducts[0].prolist[0].localpath" 
         src="{{this.common.GetImgUrl(WindowApplyProducts[0].prolist[0].localpath)}}" 
-        height="{{this.common.GetWindowHeight()/3.8}}" style="border-radius: 1.8rem;margin-left:42%;position:absolute;" class="shadow">
+        width="{{this.common.GetWindowWidth()/3.5}}"
+        height="{{this.common.GetWindowWidth()/3.5*9/16}}" style="border-radius: 1.8rem;margin-left:42%;position:absolute;" class="shadow">
       </p>
     </ion-col>
     
@@ -90,7 +95,9 @@
           <img *ngIf="WindowApplyProducts[1].prolist.length==1 && 
           WindowApplyProducts[1].prolist[0].localpath!=WindowApplyProducts[0].prolist[0].localpath" 
           src="{{this.common.GetImgUrl(WindowApplyProducts[1].prolist[0].localpath)}}" 
-          height="{{this.common.GetWindowHeight()/3.8}}" style="border-radius: 1.8rem" class="shadow">
+          width="{{this.common.GetWindowWidth()/3.5}}"
+          height="{{this.common.GetWindowWidth()/3.5*9/16}}" 
+         style="border-radius: 1.8rem" class="shadow">
         <img src="assets/imgs/arrows_right.png" width="24%" />
       </p>
     </ion-col>
